syntax = "proto3";

package sec10;
import "google/protobuf/empty.proto";
option java_multiple_files = true;
option java_package = "com.harshit.mdoels.sec10";

message BalanceCheckRequest{
    int32 account_number = 1;
}

message AccountBalance{
    int32 account_number = 1;
    int32 balance = 2;
}

message AllAccountsResponse{
    repeated AccountBalance accounts = 1;
}

message WithdrawRequest{
    int32 account_number = 1;
    int32 amount = 2;
}

message Money{
    int32 amount = 1;
}

enum ValidationCode{
    INVALID_ACCOUNT = 0;
    INVALID_AMOUNT = 1;
    INSUFFICIENT_BALANCE = 2;
}

message ErrorMessage{
    ValidationCode validation_code = 1;
}

message DepositRequest{
    oneof request{
        int32 account_number = 1;
        int32 amount = 2;
    }
}

message TransferRequest{
    int32 from_account = 1;
    int32 to_account = 2;
    int32 amount = 3;
}

enum TransferStatus{
    REJECTED = 0;
    COMPLETED = 1;
}

message TransferResponse{
    TransferStatus status = 1;
    AccountBalance from_account = 2;
    AccountBalance to_account = 3;
}

service BankService{

    /*
    validation account number should be between 1 to 10
    */

    //unary
    rpc GetAccountBalance(BalanceCheckRequest) returns (AccountBalance);

    /*
    account number should be 1 to 10
    amount should be 10 multiples
    account should have enough balance
    */

    //server streaming
    rpc Withdraw(WithdrawRequest) returns (stream Money);

}

